# gen_speckit

./: .gitignore  AGENTS.md  README.md  UPSTREAM.md  install.ps1  pyproject.toml
.claude/agents/: adaptador-clis.md  documentador.md  especialista-powershell.md  guardian-contratos.md  revisor-despachos.md  revisor-orquestacion.md  tester-pester.md
.codex/prompts/: speckit-orchestrate.md
.github/workflows/: gen-validate.yml  tests.yml
.specify/: feature.json  init-options.json  integration.json
.specify/agents/: adaptador-clis.md  documentador.md  especialista-powershell.md  guardian-contratos.md  revisor-despachos.md  revisor-orquestacion.md  tester-pester.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/orchestrator/: README.md  assign.md  orchestrate.md  report-template.md  triage.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: sync-dryrun.md
specs/001-multi-cli-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agent-specifier/: data-model.md  orchestration-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-generic-cli-support/: data-model.md  orchestration-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-specify-cli-fork/: data-model.md  orchestration-report.md  plan.md  quickstart-results.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-python-scripts-port/: data-model.md  orchestration-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-model-discovery/: data-model.md  orchestration-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-arena-model-ranking/: data-model.md  orchestration-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-multi-model-phase-dispatch/: data-model.md  orchestration-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/specify_cli/: _version.py
tests/fixtures/: models-v1.json
tests/powershell/: clis-config.Tests.ps1  get-parallel-groups.Tests.ps1  invoke-secondary.Tests.ps1  platform.Tests.ps1  scan-models.Tests.ps1  update-quota.Tests.ps1
tests/python/: conftest.py  test_asignacion_por_fase.py  test_classify_degradacion.py  test_classify_fetch.py  test_classify_global.py  test_classify_match.py  test_classify_store.py  test_clis_config.py  test_get_parallel_groups.py  test_invoke_secondary.py  test_merge_campos_nuevos.py  test_model_discovery.py  (+11 more)
(+79 files in other folders)
