[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specify-cli"
version = "0.13.0"
description = "gen_speckit — fork del GitHub Spec Kit con orquestador multi-CLI integrado. `specify init` instala base + producto multi-CLI en un solo paso."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.0",
    "click>=8.2.1",
    "rich",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "pathspec>=0.12.0",
    "json5>=0.13.0",
]

[project.scripts]
specify = "specify_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

# El paquete src/specify_cli incluye por defecto sus archivos no-Python, entre ellos los
# assets del producto multi-CLI en src/specify_cli/gen_multicli/assets/ (skills, playbooks
# del orquestador, scripts, catálogo). Viajan dentro del wheel sin declaración extra.

[tool.hatch.build.targets.wheel.force-include]
# Core pack de spec-kit (upstream): assets bundleados para que `specify init` funcione sin
# red (air-gapped / enterprise). Origen = dirs raíz vendorizados; destino = specify_cli/core_pack/.
"templates/checklist-template.md" = "specify_cli/core_pack/templates/checklist-template.md"
"templates/constitution-template.md" = "specify_cli/core_pack/templates/constitution-template.md"
"templates/plan-template.md" = "specify_cli/core_pack/templates/plan-template.md"
"templates/spec-template.md" = "specify_cli/core_pack/templates/spec-template.md"
"templates/tasks-template.md" = "specify_cli/core_pack/templates/tasks-template.md"
"templates/vscode-settings.json" = "specify_cli/core_pack/templates/vscode-settings.json"
"templates/commands" = "specify_cli/core_pack/commands"
"scripts/bash" = "specify_cli/core_pack/scripts/bash"
"scripts/powershell" = "specify_cli/core_pack/scripts/powershell"
"extensions/git" = "specify_cli/core_pack/extensions/git"
"extensions/agent-context" = "specify_cli/core_pack/extensions/agent-context"
"extensions/assess" = "specify_cli/core_pack/extensions/assess"
"extensions/bug" = "specify_cli/core_pack/extensions/bug"
"workflows/speckit" = "specify_cli/core_pack/workflows/speckit"
"presets/lean" = "specify_cli/core_pack/presets/lean"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
